examples/backends/vllm/deploy/gaie/switchyard/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: switchyard-gateway
spec:
  gatewayClassName: agentgateway
  infrastructure:
    parametersRef:
      group: agentgateway.dev
      kind: AgentgatewayParameters
      name: switchyard-gateway
  listeners:
  - name: http
    port: 80
    protocol: HTTP
